# hazel

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  bot.py  init_database.py  pyproject.toml
.github/workflows/: run-tests.yaml
tests/: test_all_env_exists.py
